--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -33,15 +33,15 @@
         <div id="collapsable-nav" class="collapse navbar-collapse">
           <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
             <li class="text-center">
-              <a href="#section1"><p class="item">Section</p></a>
+              <a href="#section1"><p class="item">Chicken</p></a>
               <hr class="visible-xs">
             </li>            
             <li class="text-center">
-              <a href="#section"><p class="item">Section</p></a>
+              <a href="#section"><p class="item">Beef</p></a>
               <hr class="visible-xs">
             </li>
             <li class="text-center">
-              <a href="#section"><p class="item">Section</p></a>
+              <a href="#section"><p class="item">Sushi</p></a>
             </li>
           </ul> 
         </div>
@@ -52,7 +52,7 @@
 	<h1 class="text-center">Our Menu</h1>
 
 	<div class="container container-fluid">
-	<div class="col-md-12">
+	<div class="col-md-12 col-sm-12 col-xs-12">
 		<section>
 		<div class="title">
 			Chicken
