--- a/lukatoni/index.html
+++ b/lukatoni/index.html
@@ -7,7 +7,7 @@
 <body>
     <h2>LUCAKA TOnii</h2>
     <br>
-    <div>Gratz ...                 asdas .... ttt</div>
+    <div>Gratz ...   ffas              asdas .... ttt</div>
 </body>
 
 </html>
